--- a/styles.css
+++ b/styles.css
@@ -120,8 +120,47 @@ article h3{
 /* integrantes */
 /* historia */
 .parra{
-    font-size: 25px;
+    font-size: 20px;
     padding: 10px;
+}
+.contenedor-historia{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+}
+.histem{
+    background-position: center;
+    background-size: cover;
+}
+.img1{
+    background-image: url(multimedia/imagine\ dragon\ antes.jpg);
+}
+.img2{
+   background-image: url(multimedia/Dan-Reynolds-2.jpg);
+}   
+.linkalbum {
+    background-image: url(multimedia/album1.jpg);
+    background-position: center;
+    background-size: cover;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    padding: 10px 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: Devil Breeze; 
+    font-size: 30px;
+}
+.linkalbum :hover{
+    color: #868686;
+}
+.img3{
+background-image: url(multimedia/-Daniel_Platzman.jpg);
+}
+.con{
+    color: white;
+    text-decoration: none;
+    border: 2px solid black;
+    background-color: black ;
 }
 /* historia */
 /* discografia */
