--- a/styles.css
+++ b/styles.css
@@ -126,55 +126,49 @@ article h3{
 .contenedor-historia{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(22, 1fr);
+    grid-template-rows: repeat(21, 1fr);
 }
 .histem{
     background-position: center;
     background-size: cover;
 }
-.img1{
-    background-image: url(multimedia/imagine\ dragon\ antes.jpg);
-}
-.img2{
+#img1{
     background-image: url(multimedia/Dan-Reynolds-2.jpg);
 }   
 .linkalbum {
     background-position: center;
     background-size: cover;
-    color: rgb(0, 0, 0);
+    color: rgb(104, 101, 101);
     text-decoration: none;
     padding: 10px 20px;
     margin-bottom: 20px;
-    text-align: center;
     font-family: Devil Breeze; 
     font-size: 30px;
 }
-.al1{
+#al1{
     background-image: url(multimedia/album1-mas-grande.jpg);
 }
-.al2{
+#al2{
     background-image: url(multimedia/album2.png);
-    color: white;
 }
-.al3{
+#al3{
     background-image: url(multimedia/album3.jpg);
 }
-.al4{
+#al4{
     background-image: url(multimedia/album4.jpg);
-    color: white;
 }
-.al5{
+#al5{
     background-image: url(multimedia/album5.jpg);
 }
-.al6{
+#al6{
     background-image: url(multimedia/album6.jpg);
 }
 .linkalbum:hover{
     filter: grayscale(100%);
     transition-duration: 0.8s;
 }
-.img3{
-background-image: url(multimedia/-Daniel_Platzman.jpg);
+#img2{
+background-image: url(multimedia/daniel-platzman.webp);
 }
 .con{
     color: white;
@@ -182,16 +176,15 @@ background-image: url(multimedia/-Daniel_Platzman.jpg);
     border: 2px solid black;
     background-color: black ;
 }
-.img4{
+#img3{
     background-image: url(multimedia/ImagineDragons2013.jpg)
 }  
-.img5{
+#img4{
     background-image: url(multimedia/Imagine_Dragons2015.jpg);
 }
-.img6{
+#img5{
     background-image: url(multimedia/Imagine_Dragons-2017.jpg);
 }
-
 /* historia */
 /* discografia */
 #medi{
@@ -267,6 +260,15 @@ footer h3{
         width: 50%;
         font-size: large;   
     }
+    .parra{
+        font-size: 21px;
+    }
+    .contenedor-historia{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(21, 400px);
+    }
+
 }
 
 @media only screen and (min-width: 600px) and (max-width: 767px){
@@ -286,9 +288,21 @@ footer h3{
         width: 50%;
         font-size: large;
     }
+    .contenedor-historia{
+        display: grid;
+        grid-template-rows: repeat(11, 1fr);
+        grid-template-columns: 1fr 1fr;
+    }
+    #img1{
+        background-position: 800px;
+    }
+    #img2{
+        background-image: url(multimedia/-Daniel_Platzman.jpg);
+    }
     footer{
         font-size: 20px;
     }
+    
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px){
@@ -311,6 +325,20 @@ footer h3{
     .card{
         width: 50%;
         font-size: 20px;
+    }
+    .contenedor-historia{
+        display: grid;
+        grid-template-rows: repeat(11, 1fr);
+        grid-template-columns: 1fr 1fr;
+    }
+    .parra{
+        font-size: 25px;
+    }
+    #img1{
+        background-position: 900px;
+    }
+    #img2{
+        background-image: url(multimedia/daniel-platzman3.png);
     }
     footer{
         font-size: 20px;
@@ -336,6 +364,17 @@ footer h3{
     .card{
         width: 50%;
         font-size: 25px;
+    }
+    .contenedor-historia{
+        display: grid;
+        grid-template-rows: repeat(11, 1fr);
+        grid-template-columns: 1fr 1fr;
+    }
+    .parra{
+        font-size: 25px;
+    }
+    #img2{
+        background-image: url(multimedia/daniel-platzman3.png);
     }
     footer{
         font-size: 20px;
@@ -364,8 +403,24 @@ footer h3{
         width: 50%;
         font-size: 30px;
     }
+    .contenedor-historia{
+        display: grid;
+        grid-template-rows: repeat(11, 2fr);
+        grid-template-columns: 1fr 1fr;
+    }
+    .parra{
+        font-size: 25px;
+    }
+    #img2{
+        background-image: url(multimedia/daniel-platzman3.png);
+    }
     footer{
         font-size: 20px;
+    }
+}
+@media only screen and (min-width: 1300px){
+    .parra{
+        font-size: 30px;
     }
 }
 
