--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,14 @@
     padding: 0; 
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 header{
     background-color: rgb(136, 14, 14);
     font-family: Devil Breeze; 
-    font-size: 20px;
-    height: 60px;
+    font-size: 18px;
+    height: 60px; 
     width: 100%;
     padding: 10px;
 }
@@ -127,6 +130,7 @@ article h3{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(21, 1fr);
+    grid-gap: 50px;
 }
 .histem{
     background-position: center;
@@ -185,6 +189,20 @@ background-image: url(multimedia/daniel-platzman.webp);
 #img5{
     background-image: url(multimedia/Imagine_Dragons-2017.jpg);
 }
+.subir{
+    height: 20px;
+    width: 20px;
+    background-color: rgb(136, 14, 14);
+    color: black;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    text-align: center;
+    line-height: 20px;
+    font-size: 15px;
+    box-shadow: 0 0 3px black;
+    border-radius: 5px;
+}
 /* historia */
 /* discografia */
 #medi{
@@ -196,14 +214,51 @@ background-image: url(multimedia/daniel-platzman.webp);
 /* discografia */
 /* gira */
 #magi{
-    height: 1300px;
+    height: auto;
     background-color: rgb(27, 27, 27);
     color: white;
-    font-size: 20px;
+    font-size: 10px;
+}
+.imgi{
+    height: 500px;
+    width: 100%;
+    background-image: url(multimedia/dan-escenari.webp);
+    background-position: center;
+    background-size: cover;
 }
 table{
-    border: rgb(136, 14, 14);
-    font-size: 40px;
+    border: 3px solid rgb(136, 14, 14);
+    font-size: 11px;
+}
+th{
+    border: 3px solid rgb(136, 14, 14);
+}
+tr{
+    border: 3px solid rgb(136, 14, 14);
+}
+.boto a{
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    background-color: rgb(136, 14, 14);
+    border: 2px solid rgb(136, 14, 14);
+    border-radius: 6px;
+}
+.boto a:hover{
+    background-color: black;
+    border: 2px solid rgb(104, 101, 101);
+}
+.bota a{
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    background-color: rgb(136, 14, 14);
+    border: 2px solid rgb(136, 14, 14);
+    border-radius: 6px;
+}
+.bota a:hover{
+    background-color: rgb(122, 2, 2);
+    border: 2px solid rgb(119, 2, 2);
 }
 /* gira */
 footer{
@@ -211,8 +266,10 @@ footer{
     font-size: 15px;
     height: auto;
     width: 100%;
+    padding-bottom: 1px;
 }
 footer h3{
+    font-size: 17px;
     text-align: center;
     padding-left: 100px;
 }
@@ -234,7 +291,7 @@ footer h3{
 .redes i{
     letter-spacing: 5px;
     float: right;
-    padding-top: 100px;
+    padding-top: 150px;
 }
 .redes a{
     text-decoration: none;
@@ -268,12 +325,14 @@ footer h3{
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(21, 400px);
     }
-
+    table{
+        font-size: 14px;
+    }
 }
 
 @media only screen and (min-width: 600px) and (max-width: 767px){
     header{
-        font-size: 23px;
+        font-size: 21px;
     }
     .h1-int{
         font-size: 40px;
@@ -299,15 +358,17 @@ footer h3{
     #img2{
         background-image: url(multimedia/-Daniel_Platzman.jpg);
     }
-    footer{
-        font-size: 20px;
+    table{
+        font-size: 17px;
     }
-    
+    footer{
+        font-size: 19px;
+    }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px){
     header{
-        font-size: 29px;
+        font-size: 28px;
     }
     .call{
         width: 70%;
@@ -339,6 +400,9 @@ footer h3{
     }
     #img2{
         background-image: url(multimedia/daniel-platzman3.png);
+    }
+    table{
+    font-size: 20px;
     }
     footer{
         font-size: 20px;
@@ -376,6 +440,15 @@ footer h3{
     #img2{
         background-image: url(multimedia/daniel-platzman3.png);
     }
+    table{
+        font-size: 21px;
+    }
+    .boto a{
+        font-size: 21px;
+    }
+    .bota a{
+        font-size: 21px;
+    }
     footer{
         font-size: 20px;
     }
@@ -407,12 +480,25 @@ footer h3{
         display: grid;
         grid-template-rows: repeat(11, 2fr);
         grid-template-columns: 1fr 1fr;
+        grid-gap: 100px;
     }
     .parra{
         font-size: 25px;
     }
     #img2{
         background-image: url(multimedia/daniel-platzman3.png);
+    }
+    .imgi{
+        height:800px;
+    }
+    table{
+        font-size: 22px;
+    }
+    .boto a{
+        font-size: 22px;
+    }
+    .bota a{
+        font-size: 22px;
     }
     footer{
         font-size: 20px;
