hago responsive el header

--- a/styles.css
+++ b/styles.css
@@ -17,20 +17,60 @@ header{
     height: 60px; 
     width: 100%;
     padding: 10px;
+    text-decoration: none;
+    list-style: none;
+}
+.container{
+    max-width: 1100px;
+    margin: 0 auto;
+}
+.back{
+    padding: 32px 0;
+    background-color: rgb(136, 14, 14);
+}
+.menu{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1000;
+}
+.prin{
+    font-size: 24px;
+    color: black;
+    font-weight: 800;
+    text-transform: uppercase;
 }
 .barra{  
     text-align: center;
 }
 .barra ul li{
     list-style: none;
-    display: inline-block;
+    position: relative;
+    float: left;
 }
 .barra a{
+    font-size: 18px;
+    padding: 20px;
     color: black;
     text-decoration: none;
+    display: block;
 } 
 .barra a:hover{
     color: #868686;
+}
+#menu{
+    display: none;
+}
+.menu-icono{
+    width: 25px;
+}
+.menu label{
+    cursor: pointer;
+    display: none;
 }
 main{
     height: auto;
@@ -309,9 +349,58 @@ footer h3{
     color: #868686;
 }
 
-
+@media only screen and (max-width: 480px){
+    .menu{
+        padding: 30px;
+    }
+    .menu label{
+        font-size: 30px;
+        display: initial;
+    }
+    .back{
+        padding: 40px 0;
+    }
+    .menu .barra{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: rgb(122, 2, 2);
+        display: none;
+    }
+    .barra ul li{
+        width: 100%;
+    }
+    #menu:checked ~ .barra{
+        display: initial;
+    } 
+}
 
 @media only screen and (min-width: 480px) and (max-width: 599px){
+    .menu{
+        padding: 30px;
+    }
+    .menu label{
+        font-size: 35px;
+        display: initial;
+    }
+    .back{
+        padding: 40px 0;
+    }
+    .menu .barra{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: rgb(122, 2, 2);
+        display: none;
+    }
+    .barra ul li{
+        width: 100%;
+    }
+    #menu:checked ~ .barra{
+        display: initial;
+    } 
     .h1-int{
         font-size: 40px;
     }
@@ -339,9 +428,30 @@ footer h3{
 }
 
 @media only screen and (min-width: 600px) and (max-width: 767px){
-    header{
-        font-size: 21px;
+    .menu{
+        padding: 30px;
     }
+    .menu label{
+        font-size: 35px;
+        display: initial;
+    }
+    .back{
+        padding: 40px 0;
+    }
+    .menu .barra{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: rgb(122, 2, 2);
+        display: none;
+    }
+    .barra ul li{
+        width: 100%;
+    }
+    #menu:checked ~ .barra{
+        display: initial;
+    } 
     .h1-int{
         font-size: 40px;
     }
