--- a/styles.scss
+++ b/styles.scss
@@ -94,41 +94,40 @@ main{
     display: flex;
     justify-content: center;
     align-items: end;
+        .call{
+        color: $color3;
+        width: 100%;
+        background-color: rgba(66, 6, 6, 0.459);
+        border: 4px solid $color1;
+        padding: 20px;
+        float: right;
+        margin: 30px;
+        box-shadow: 2px 2px 5px rgba(131, 9, 9, 0.801);
+        border-radius: 10px;
+        font-family: $font2;
+        text-align: center;
+        font-size: 13px;
+        h1{
+            color: $color3;
+            margin-bottom: 10px;
+            font-family: $font1;
+        }
+        a {
+            background-color: $color2;
+            color: $color3;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin-bottom: 20px;
+        }
+        p{
+            margin-bottom: 20px;
+        }
+        a:hover{
+            background-color: $color1;
+            color: $color2;
+        }
+        }
 }
-.call{
-    color: $color3;
-    width: 100%;
-    background-color: rgba(66, 6, 6, 0.459);
-    border: 4px solid $color1;
-    padding: 20px;
-    float: right;
-    margin: 30px;
-    box-shadow: 2px 2px 5px rgba(131, 9, 9, 0.801);
-    border-radius: 10px;
-    font-family: $font2;
-    text-align: center;
-    font-size: 13px;
-}
-h1{
-    color: $color3;
-    margin-bottom: 10px;
-    font-family: $font1;
-}
-.call a {
-    background-color: $color2;
-    color: $color3;
-    text-decoration: none;
-    padding: 10px 20px;
-    margin-bottom: 20px;
-}
-.call p{
-    margin-bottom: 20px;
-}
-.call a:hover{
-    background-color: $color1;
-    color: $color2;
-}
-
 /* integrantes */
 .h1-int{
     text-align: center;
@@ -313,10 +312,6 @@ tr{
     border: 2px solid $color1;
     border-radius: 6px;
 }
-.bota a:hover{
-    background-color: $color1;
-    border: 2px solid $color1;
-}
 /* gira */
 footer{
     background-color: $color1;
@@ -324,40 +319,39 @@ footer{
     height: auto;
     width: 100%;
     padding-bottom: 1px;
+        .redes{
+        font-size: 30px;
+        color: $color2;
+            a{
+            text-decoration: none;
+            color: $color2;
+                a:hover{
+                color: $color4
+                }
+                i{
+                letter-spacing: 5px;
+                float: right;
+                padding-top: 150px;
+            }
+        }
+    } 
+        .foo{
+        text-align: left;
+        padding-top: 40px;
+            h3{
+            font-size: 17px;
+            text-align: center;
+            padding-left: 100px;
+            }
+            a{
+            color: $color2;
+            text-decoration: none; 
+            a:hover{
+                color:  $color4;
+            }
+            }
+    }
 }
-footer h3{
-    font-size: 17px;
-    text-align: center;
-    padding-left: 100px;
-}
-.foo{
-    text-align: left;
-    padding-top: 40px;
-}
-.foo a{
-    color: $color2;
-    text-decoration: none;
-}
-.foo a:hover{
-    color: $color4;
-}
-.redes{
-    font-size: 30px;
-    color: $color2;
-} 
-.redes i{
-    letter-spacing: 5px;
-    float: right;
-    padding-top: 150px;
-}
-.redes a{
-    text-decoration: none;
-    color: $color2;
-}
-.redes a:hover{
-    color: #868686;
-}
-
 @media only screen and (max-width: 480px){
     .menu{
         padding: 30px;
